[package]
name = "rosu-memory-lib"
version = "1.1.0"
edition = "2021"
description = "A library to read osu! memory"
license = "MIT"
repository = "https://github.com/Glubus/rosu-memory-lib"
authors = ["Glubus", "486c"]
keywords = ["osu", "memory", "game"]
categories = ["games", "memory-management"]

[lib]
path = "src/lib.rs"
name = "rosu_memory_lib"
crate-type = ["cdylib", "rlib"]

[dependencies]
rosu-mem = "2.0.0"
rosu-map = "0.2.1"
rosu-pp = "3.1.0"
rayon = "1.10.0"

[dev-dependencies]
rosu-mods = "0.3.1"