[package]
name = "rosu-memory-python"
version = "0.1.0"
edition = "2021"

[lib]
name = "rosu_memory_python"
crate-type = ["cdylib"]

[dependencies]
rosu_memory_lib = { path = "../.." }
rosu-mem = { git = "https://github.com/486c/rosu-mem.git", tag = "v2.0.0" }
pyo3 = { version = "0.25", features = ["extension-module"] } 
