[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "rosu-memory"
version = "0.1.0"
description = "Python bindings for rosu-memory-lib"
requires-python = ">=3.8"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "rosu_memory_python" 